# Solver-Showcase

./: .dockerignore  ARCHITECTURE.md  AVATAR_FEATURE.md  CONFIG_GUIDE.md  CUTE_UPDATE.md  Caddyfile  DEPLOYMENT.md  Dockerfile  FEATURE_STATUS.md  IMPLEMENTATION_SUMMARY.md  MOBILE_TEST_GUIDE.md  PRODUCTION_FIXES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_UPGRADE.md  RESPONSIVE_DESIGN.md  docker-compose.yaml  package.json
backend/: .env.example  pyproject.toml
frontend/: package.json
