[project]
name = "backend"
version = "0.1.0"
description = "ButterMath Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "granian>=1.6.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "uvicorn>=0.30.0",
    "google-genai>=1.0.0",
    # 速率限制
    "slowapi>=0.1.9",
    # 文件验证
    "pillow>=10.0.0",
    # 监控（可选）
    "sentry-sdk[fastapi]>=2.0.0",
    # Redis（生产环境推荐）
    "redis>=5.0.0",
]
